tests/NormalTests/paczka1/small_fuzzy/77384984.err
Error in line 12: N5MKw5sbCkX A416 62,3
